--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -29,82 +29,86 @@
       class="bg-green-400 text-white p-2 rounded hover:bg-green-500 transition duration-200">
       Search
     </button>
+
+    <div class="relative inline-block">
+      <div class="flex items-center p-2 rounded cursor-pointer">
+        <i class="fa fa-download text-lg"></i>
+        <select (change)="handleExport($event)" class="absolute inset-0 opacity-0 cursor-pointer">
+          <option value="csv">
+            <i class="fa fa-file-csv mr-2"></i>CSV
+          </option>
+          <option value="txt">
+            <i class="fa fa-file-alt mr-2"></i>TXT
+          </option>
+          <option value="pdf">
+            <i class="fa fa-file-pdf mr-2"></i>PDF
+          </option>
+        </select>
+      </div>
+    </div>
+
   </div>
 
-  <!-- Botões de exportação -->
-  <div class="mb-4 flex justify-center space-x-4">
-    <button (click)="exportToCSV()"
-      class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200">
-      Export to CSV
-    </button>
-    <button (click)="exportToTXT()"
-      class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200">
-      Export to TXT
-    </button>
-    <button (click)="exportToPDF()"
-      class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200">
-      Export to PDF
-    </button>
-  </div>
+</div>
 
-  <div class="mt-4">
-    <h2 class="text-xl font-semibold mb-2">Events:</h2>
-    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-      <ng-container *ngIf="isLoading; else eventsList">
-        <li class="mb-2 p-4 w-full border rounded-lg shadow animate-pulse bg-white">
-          <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
-          <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
-          <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
-          <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
+
+<div class="mt-4">
+  <h2 class="text-xl font-semibold mb-2">Events:</h2>
+  <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+    <ng-container *ngIf="isLoading; else eventsList">
+      <li class="mb-2 p-4 w-full border rounded-lg shadow animate-pulse bg-white">
+        <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
+        <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
+        <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
+        <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
+      </li>
+    </ng-container>
+    <ng-template #eventsList>
+      <ng-container *ngIf="currentEvents.length > 0; else noEvents">
+        <li *ngFor="let event of currentEvents" class="p-4 border rounded-lg shadow flex flex-col bg-white">
+          <h3 class="font-bold text-lg text-green-400">{{ event.title }}</h3>
+          <div class="flex-1 overflow-y-auto text-gray-600">
+            <p class="text-gray-600" [innerHTML]="event.description_short"></p>
+          </div>
+          <div class="text-gray-500 mt-1">
+            <p><strong>Start:</strong> {{ event.start_datetime | date: 'short' }}</p>
+            <p><strong>End:</strong> {{ event.end_datetime | date: 'short' }}</p>
+          </div>
+          <p class="text-gray-500 mt-1">
+            <strong>Tickets:</strong> {{ event.ticket_type === 'no_ticket' ? 'No Ticket' : event.cost_display ||
+            'Free' }}
+          </p>
+          <p class="text-gray-500 mt-1">
+            <strong>Last Updated:</strong> {{ event.updated_at | date: 'short' }}
+          </p>
+          <a [href]="event.url" target="_blank"
+            class="text-green-500 mt-2 inline-block bg-green-100 hover:bg-green-200 text-base font-semibold px-3 py-2 rounded transition duration-200">
+            View more
+          </a>
         </li>
       </ng-container>
-      <ng-template #eventsList>
-        <ng-container *ngIf="currentEvents.length > 0; else noEvents">
-          <li *ngFor="let event of currentEvents" class="p-4 border rounded-lg shadow flex flex-col bg-white">
-            <h3 class="font-bold text-lg text-green-400">{{ event.title }}</h3>
-            <div class="flex-1 overflow-y-auto text-gray-600">
-              <p class="text-gray-600" [innerHTML]="event.description_short"></p>
-            </div>
-            <div class="text-gray-500 mt-1">
-              <p><strong>Start:</strong> {{ event.start_datetime | date: 'short' }}</p>
-              <p><strong>End:</strong> {{ event.end_datetime | date: 'short' }}</p>
-            </div>
-            <p class="text-gray-500 mt-1">
-              <strong>Tickets:</strong> {{ event.ticket_type === 'no_ticket' ? 'No Ticket' : event.cost_display ||
-              'Free' }}
-            </p>
-            <p class="text-gray-500 mt-1">
-              <strong>Last Updated:</strong> {{ event.updated_at | date: 'short' }}
-            </p>
-            <a [href]="event.url" target="_blank"
-              class="text-green-500 mt-2 inline-block bg-green-100 hover:bg-green-200 text-base font-semibold px-3 py-2 rounded transition duration-200">
-              View more
-            </a>
-          </li>
-        </ng-container>
-        <ng-template #noEvents>
-          <li class="p-4 w-full border rounded-lg shadow bg-white flex justify-center items-center">
-            <p class="text-gray-500">No events available.</p>
-          </li>
-        </ng-template>
+      <ng-template #noEvents>
+        <li class="p-4 w-full border rounded-lg shadow bg-white flex justify-center items-center">
+          <p class="text-gray-500">No events available.</p>
+        </li>
       </ng-template>
-    </ul>
-  </div>
+    </ng-template>
+  </ul>
+</div>
 
-  <div *ngIf="isLoading" class="mt-4 animate-pulse">
-    <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
-    <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
-  </div>
+<div *ngIf="isLoading" class="mt-4 animate-pulse">
+  <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
+  <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
+</div>
 
-  <div class="flex justify-between mt-4">
-    <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"
-      class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
-      Previous
-    </button>
-    <span>Page {{ currentPage }} of {{ totalPages }}</span>
-    <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages"
-      class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
-      Next
-    </button>
-  </div>
+<div class="flex justify-between mt-4">
+  <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"
+    class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
+    Previous
+  </button>
+  <span>Page {{ currentPage }} of {{ totalPages }}</span>
+  <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages"
+    class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
+    Next
+  </button>
 </div>
