--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,22 +1,18 @@
 <div class="p-4">
-  <h1 class="text-2xl font-bold mb-4 text-center">{{ calendarInfo?.title }}</h1>
-  <p class="text-gray-700 mb-6 text-center">{{ calendarInfo?.description_short }}</p>
-
-  <div
-    class="sticky top-0 bg-white z-10 mb-4 p-4 border border-slate-400 shadow-md flex flex-wrap justify-center gap-2">
+  <div class="sticky top-0 bg-white z-10 mb-4 p-1 flex flex-wrap justify-center gap-2">
     <input type="text" [(ngModel)]="searchTitle" placeholder="Search by title"
-      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400" />
+      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400 w-full sm:w-auto" />
     <input type="date" [(ngModel)]="searchStartDate"
-      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400" />
+      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400 w-full sm:w-auto" />
     <select [(ngModel)]="searchTicketType"
-      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400">
+      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400 w-full sm:w-auto">
       <option value="">All Ticket Types</option>
       <option value="free">Free</option>
       <option value="paid">Paid</option>
       <option value="no_ticket">No Ticket Required</option>
     </select>
     <select [(ngModel)]="searchEventStatus"
-      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400">
+      class="border p-2 rounded focus:outline-none focus:ring-2 focus:ring-green-400 w-full sm:w-auto">
       <option value="">All Statuses</option>
       <option value="confirmed">Confirmed</option>
       <option value="tentative">Tentative</option>
@@ -46,69 +42,77 @@
         </select>
       </div>
     </div>
-
   </div>
 
-</div>
-
-
-<div class="mt-4">
-  <h2 class="text-xl font-semibold mb-2">Events:</h2>
-  <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-    <ng-container *ngIf="isLoading; else eventsList">
-      <li class="mb-2 p-4 w-full border rounded-lg shadow animate-pulse bg-white">
-        <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
-        <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
-        <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
-        <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
-      </li>
-    </ng-container>
-    <ng-template #eventsList>
-      <ng-container *ngIf="currentEvents.length > 0; else noEvents">
-        <li *ngFor="let event of currentEvents" class="p-4 border rounded-lg shadow flex flex-col bg-white">
-          <h3 class="font-bold text-lg text-green-400">{{ event.title }}</h3>
-          <div class="flex-1 overflow-y-auto text-gray-600">
-            <p class="text-gray-600" [innerHTML]="event.description_short"></p>
-          </div>
-          <div class="text-gray-500 mt-1">
-            <p><strong>Start:</strong> {{ event.start_datetime | date: 'short' }}</p>
-            <p><strong>End:</strong> {{ event.end_datetime | date: 'short' }}</p>
-          </div>
-          <p class="text-gray-500 mt-1">
-            <strong>Tickets:</strong> {{ event.ticket_type === 'no_ticket' ? 'No Ticket' : event.cost_display ||
-            'Free' }}
-          </p>
-          <p class="text-gray-500 mt-1">
-            <strong>Last Updated:</strong> {{ event.updated_at | date: 'short' }}
-          </p>
-          <a [href]="event.url" target="_blank"
-            class="text-green-500 mt-2 inline-block bg-green-100 hover:bg-green-200 text-base font-semibold px-3 py-2 rounded transition duration-200">
-            View more
-          </a>
+  <div class="mt-4">
+    <h2 class="text-xl font-semibold mb-2">Events:</h2>
+    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+      <ng-container *ngIf="isLoading; else eventsList">
+        <li class="mb-2 p-4 w-full border rounded-lg shadow animate-pulse bg-white">
+          <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
+          <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
+          <div class="h-4 bg-gray-300 rounded w-3/4 mb-2"></div>
+          <div class="h-3 bg-gray-300 rounded mb-2 w-1/2"></div>
         </li>
       </ng-container>
-      <ng-template #noEvents>
-        <li class="p-4 w-full border rounded-lg shadow bg-white flex justify-center items-center">
-          <p class="text-gray-500">No events available.</p>
-        </li>
+      <ng-template #eventsList>
+        <ng-container *ngIf="currentEvents.length > 0; else noEvents">
+          <li *ngFor="let event of currentEvents"
+            class="p-6 border rounded-lg shadow-lg bg-white transition-transform transform hover:scale-105 hover:shadow-xl">
+            <div class="flex items-center justify-between mb-4">
+              <h3 class="font-bold text-lg text-green-400">{{ event.title }}</h3>
+              <span class="text-sm bg-green-100 text-green-600 px-2 py-1 rounded-full">{{ event.event_status }}</span>
+            </div>
+            <div class="flex-1 overflow-y-auto text-gray-600">
+              <p class="text-gray-600" [innerHTML]="event.description_short"></p>
+            </div>
+            <div class="text-gray-500 mt-4">
+              <div class="flex items-center">
+                <i class="fa fa-calendar-alt mr-2"></i>
+                <p><strong>Start:</strong> {{ event.start_datetime | date: 'short' }}</p>
+              </div>
+              <div class="flex items-center">
+                <i class="fa fa-calendar-check mr-2"></i>
+                <p><strong>End:</strong> {{ event.end_datetime | date: 'short' }}</p>
+              </div>
+            </div>
+            <p class="text-gray-500 mt-1">
+              <strong>Tickets:</strong> {{ event.ticket_type === 'no_ticket' ? 'No Ticket' : event.cost_display ||
+              'Free' }}
+            </p>
+            <p class="text-gray-500 mt-1">
+              <strong>Last Updated:</strong> {{ event.updated_at | date: 'short' }}
+            </p>
+            <a [href]="event.url" target="_blank"
+              class="text-white bg-green-400 hover:bg-green-500 transition duration-200 inline-block mt-4 px-4 py-2 rounded-full shadow">
+              View more
+            </a>
+          </li>
+
+        </ng-container>
+        <ng-template #noEvents>
+          <li class="p-4 w-full border rounded-lg shadow bg-white flex justify-center items-center">
+            <p class="text-gray-500">No events available.</p>
+          </li>
+        </ng-template>
       </ng-template>
-    </ng-template>
-  </ul>
-</div>
+    </ul>
+  </div>
 
-<div *ngIf="isLoading" class="mt-4 animate-pulse">
-  <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
-  <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
-</div>
+  <div *ngIf="isLoading" class="mt-4 animate-pulse">
+    <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
+    <div class="h-6 bg-gray-300 rounded w-1/4 mb-2"></div>
+  </div>
 
-<div class="flex justify-between mt-4">
-  <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"
-    class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
-    Previous
-  </button>
-  <span>Page {{ currentPage }} of {{ totalPages }}</span>
-  <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages"
-    class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
-    Next
-  </button>
+  <div class="flex justify-between mt-4">
+    <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"
+      class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
+      Previous
+    </button>
+    <span>Page {{ currentPage }} of {{ totalPages }}</span>
+    <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages"
+      class="px-4 py-2 bg-green-400 text-white rounded hover:bg-green-500 transition duration-200">
+      Next
+    </button>
+  </div>
 </div>
