--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,8 @@
 @tailwind utilities;
 @import "flowbite";
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+
+body {
+  @apply font-sans;
+}
